Fix side header spacing and add placeholder info

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     justify-content: space-between;
     background-image: url(./assets/halie-west-25xggax4bSA-unsplash.jpg);
     background-size: cover;
-    width: max(300px, 45%);
+    width: max(700px, 30%);
 }
 
 .side-panel > p {
@@ -51,6 +51,10 @@ h1 {
     text-align: center;
 
     font-size: 5rem;
+}
+
+form {
+    width: 100%;
 }
 
 .info-container {
@@ -170,8 +174,10 @@ button {
     }
 
     label, input {
+        box-sizing: border-box;
         display: flex;
         width: 100%;
+        padding-left: 5px;
     }
 
     label {
@@ -185,11 +191,8 @@ button {
 
     input:required + span::before {
         width: 180px;
-        position: absolute;
         top: 62px;
         right: -184px;
-        content: "* Passwords do not match.";
-        color: darkred;
         font-size: 0.9rem;
     }
 
@@ -204,5 +207,6 @@ button {
     .action-container {
         display: flex;
         flex-direction: column;
+        height: 170px;
     }
 }
